--- a/lib/meshchat/locale/en.yml
+++ b/lib/meshchat/locale/en.yml
@@ -12,3 +12,4 @@ identity:
   current_alias: 'Your current name/alias is: %{name}'
 node:
   not_found: "Node not found, or does not have a location. Have you imported %{name}?"
+  multiple_with_alias: "!! You know multiple people named '%{name}', which would you like to send to?"
